--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^13.0.0",
     "axios": "^1.7.9",
     "masonry-layout": "^4.2.2",
     "path": "^0.12.7",
@@ -19,8 +20,8 @@
     "wc-waterfall": "^0.1.3"
   },
   "devDependencies": {
-    "@vant/auto-import-resolver": "^1.3.0",
     "@types/node": "^20.14.5",
+    "@vant/auto-import-resolver": "^1.3.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
